atualizacao do sobre

--- a/frontend/views/sobre.html
+++ b/frontend/views/sobre.html
@@ -1,5 +1,7 @@
 <div class="jumbotron text-center">
         <h1>Sobre Page</h1>
 
-        <p>{{ message }}</p>
+        <p>Feito por Antunes Dantas da Silva</p>
+
+        <a href="https://github.com/antunesdantass/lab3si">Código fonte</a>
 </div>
